--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webstudio</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <header>
     <nav>
-        <a href="./index.html">webstudio</a>
+        <a href="./index.html">WebStudio</a>
     <ul>
         <li><a href="./index.html">Studio</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
@@ -121,7 +121,7 @@ problem to walk away with the perfect and creative solution.
     </main>
 
     <footer>
-        <a href="">webstudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and sales 
             for your business with digital marketing &
